[project]
name = "my_project"
version = "0.1.0"
description = ""
dependencies = [
    "autopep8>=2.3.2",
    "flake8>=7.2.0",
    "markdown-it-py==3.0.0",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "pathspec==0.12.1",
    "prompt-toolkit==3.0.51",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "questionary==2.1.0",
    "rich==14.0.0",
    "ruff>=0.12.2",
    "simple-term-menu==1.6.6",
    "types-requests==2.32.0.20250602",
    "typing-extensions==4.14.0",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
]
